@@ -4,14 +4,26 @@ Hash: SHA256
 AUX exact-image-0.7.5-libpng14.patch 2431 SHA256 19c2ed561d37ca66543f5c778fa714b873d53289bf779f1482a76222ea5fb2ba SHA512 21e41452b8abd4321739b3a300c9814c854d83029302c924115df31bbba040f21f5bad21c038f71bae04002c740347ad4fcb6e17255d4f5430ce5148d70cc9aa WHIRLPOOL 737ad67af6fc673d838589bd90625a030080c3757a81486204c8c6513f8ccaf1db49bcb16692bc7cb5248c394a99d925c9cc6404e5cd0e14f2b1dc67c7af3a95
 AUX exact-image-0.8.1-libpng15.patch 750 SHA256 d59213a04fbcf4f3eb498d6afa9ffa201235eff1026bb7797b75727b1f73ca25 SHA512 ea4073340aef58299b735efca936701870b352330d8c29968ccaa9d044d27b8d5e6cc5d67ac4f4a0a447f2ffd70af50e4eae31e689cb363b8f29034b79cd982d WHIRLPOOL b176411807ad7927d3c4952a8efd798fb0d3b67ad215bb1e15ecd348a16fc5de1c72292f4b12c2ef16bfa8fb2cf9bc65655bc4c2428a9167931d7c42f5bc8a19
 DIST exact-image-0.8.1.tar.bz2 283660 SHA256 926a09c897489705ba42daeb01fc4a3c327a8194dc65431f630d50684390e28b SHA512 0adc51c5a29415e236a963cfdaf8f5527e628e9a645e87d00c69a7185e60639cfcd9b1c2b4c3abe1826c5364f0c5d45a0ebb8923cfed53d041d1d36b2604b565 WHIRLPOOL 58b7d66f52d5b6c2202806cad6ca2ebc8e21035a32698861a575c8246f63f4edacc930defd3fa4f6b8496368d2d9d002f06f6463e4f45abc1c235a0bc68a0352
-EBUILD exact-image-0.8.1-r1.ebuild 2714 SHA256 d3922b47c1a8b233e1acf2d7d13d2aae4154c9cabe69feafdd75b4e24add2fb3 SHA512 243dfc14a61967298229a8fb4e6a7b3dd1a0f3ff72fc2798c7e54c910d067120bd03d981e8ec216f419ae99f3d5e0b300ac8b5de0186ca7a95eedee0b8e8b7d9 WHIRLPOOL 20251f9b01ac1f4402c369c51d2eb86b58ef5ee76dca5a533761e04397d179efa16c54b5fe4480280eff6f30dcf512a8207bd3b9fda4741b0a5d9da9178c79d2
-EBUILD exact-image-0.8.1.ebuild 2270 SHA256 b0e242df273dcc7e2e2e8510f1bf6ed570475309698b8eb2a17169f09ba28053 SHA512 fb2dc8c6c06d96d37f91d8b334af1c141a36e49933d8d589ce7d2214d430184dcb97a11e42a3d901892fb930072b69a15332711b6d85bd81086c2cdf97979463 WHIRLPOOL e3fa52012d8dd5e1bf2a432c38f1c3e01cfafbbb16fbdfaec6894211a308cceb27c79ec1078bff2e9973ed7106307c600bf55b8a0ca3e1f9e63329cf24004b26
-MISC ChangeLog 1703 SHA256 22481c1449b61cbe6a8b36571f1e622b0bda703e57bbdce919fda644d34aa52f SHA512 dc6257b89b9236bfe9ea424e232f80051f24658c54b4bdf763abf7d43039fa375e9e4b11276f39a62cb2424659bf149681cdc5cd246fab8704ffe730838ae9d3 WHIRLPOOL 550e7b84974855164f6fa4afbfb672b87b67bb8e22e3fb7f6301ebbe78da5ba1951803085971f1f5aa869bae93b63143a4f84ecd890a9b228734a412b29fdfb6
+EBUILD exact-image-0.8.1-r1.ebuild 2714 SHA256 006a4299ae8f6cbfb7a1a5fbdc588e50cc666349a77bd21e0aabaee3d4fcd8de SHA512 fc7e128e1660b762aecb314d57984cd030b02cb9a99b99d54ac0cf925fa9c56ffe2f4e4c26703a65614a8573e435b3e72c101ad1d0603a3ac1e972318aa676a7 WHIRLPOOL d9cce6998a90a203734df61f2dbd1aa490be23d7e9ef47e810773a8cdd5f3c46384c7612216beb45e5b41dbe4a9a1cfb3b445f9f8352b4e8b4b72411e055c1a6
+EBUILD exact-image-0.8.1.ebuild 2269 SHA256 abe843d7e3bc6159d68de28a0db4e9db5e2321b632fec542643da0e41c7a8eb9 SHA512 35e831becef9ef82164a19545479604923fa747eab50f4dea29b276596a831533c36903fd95d5b3628f78c5a909163283a26bd5f6ab4f77ac1ba42a26151e5f3 WHIRLPOOL abe16a5236f79968cadf4ebb5f1d71878a7dc3ff2bf50adc60774a1ca9183bf3bd546d2bc37a570fe8d736b35780616f2df9585fe916b8ca295e31e57e60f07f
+MISC ChangeLog 1921 SHA256 31dd4c180e285cb9fb6f48811b3d56a698b8722cc4e020df1a3ff88312f90598 SHA512 64329495a06d9f2a31c404cb645b21625b2c54cdbb8ab03c9b01165da7fe275b3130d0fdb32a964dc2044c373228a9c4b443a7b4fa70a02e7529236cbce340b8 WHIRLPOOL 1ee3da77d04fae88142e5a7ba7fbd424e9f2a3104f4bafc12e3f6425c6ebc34a808e1724f8207446ed0bb91a79dd7da668b3894c5dbed05b0a908cb89b75a073
 MISC metadata.xml 243 SHA256 e6f3d1caff432a379e20fb89028bacef1f54d8d0b27da2b80a144eeb9d00a116 SHA512 2727964833b72ad41d234fed941d64975dd1dafc4a64301c9a1eea9410f066e8c47a6173e6dc8b250cee1e82656bf9cf223baf445718751dd980ae703d79f880 WHIRLPOOL 32f77bd011483b88b11c6c6da339f94cf17ec9bcfb22b750fd9f377a0494c3a61cfc3d09b7d0a2c66ceb813a8ea61dc606eb126fbc966c41e90f743a22f9c4ff
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlBwGj0ACgkQCaWpQKGI+9TQ1QCfaKFmSwECriGxuNt3+USCOkrK
-O68An3EYX+rYJsvypvfpHdLpwxONNVtS
-=sOfK
+iQJ8BAEBCABmBQJUNufDXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQwNzlCRDk4QzA4RENBRkYzQUEwRjQzMDlF
+QkU2QTMzNkJFMTkwMzlDAAoJEOvmoza+GQOcxJ0QAJVavsVje1Gvb3d/7rDga09T
+yjpXlXe2vax5VaTS83QHQtrAT+bHaAW+2Bbb5k/SrSzmR9OPu+IX9vLzSeawR9jF
+HReJGXBlTqjzpLAIHzsp0EBiq7gYc3AkdhZ2VN3FMulLJJbeShhL5fRzwhfUC65m
+jcjE7debDN1nuMS8r9x/BP7N6kpj2l9e8jpQbm/jK09y1lRtOqG7JanMAvuCzmHw
+aCtAFwvGU9uk2/FiHIKG17aKWW+Igsr/qC85gnWNPqifVZyWUe6l0CvK64a+CY7/
+ch7OwfVhfXqxMhz0P3UDgumGrjnX7uL4oBCWG96Tu7zXlZZdT/Gs/eDb0Oywwt3b
+ktjbpAbqElVsFCuymnQ8OgQGrA5SUY0sBBIxlur231pC101tCs12Oogq39se9ceh
+tRs4IF+NmJV3EJ4a8Ft2FjiutgHLgaUL8wbDM1esR76o7LzIw0WlCGfZBZwvuoXz
+iXMlT2w4BlclhyltDNHDH1wY4SH/0t2oA5UyB9ZdyGrW9sVcaK0m04dSK9xVj2Y5
+mvDalZ6DZExEP8zd60w8QEaEDLB6WMnMfjMEKngX/UGWTP9I6j2sMFN7ILq31Doy
+SjvHt9dEMu2lhhm8rlsspWTpdgUAr/Uewc+2cAN6W2lDQb3M42XZJTuJLxl3tRrh
+/9d06/LhvDy9Uz6nUCkJ
+=PK6x
 -----END PGP SIGNATURE-----
